<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/idLayoutAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center">

    <EditText
        android:id="@+id/idEditTextKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_value_of_key"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/idEditTextValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_value_of_value"
        android:inputType="number|numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/idBtnAdd"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="add"
            android:text="@string/add" />

        <Button
            android:id="@+id/idBtnExit"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="exit"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>